# lstm-vae

./: .gitignore  README.md  main.py  pyproject.toml  setup.py
src/config/: params.py
src/models/: lstmvae.py  pred.py
src/plot/: plot.py
src/process_data/: make_dataset.py  midi2vec.py  preprocess.py
src/train/: encoder_decoder_pretrain.py  train.py  vae_train.py
src/utils/: logger.py
